add parsing logic

--- a/configs/.env
+++ b/configs/.env
@@ -1,4 +1,11 @@
-var1=sss # its coment
-var=neew
 kairat=nurtas
-gg=mynga
+foo=bar #with comment
+gg=
+foo=#bar 
+# gg brazeer
+Incorrect Line
+переменная=на русском
+var="with doubke quotes"
+var2="" # var with empty quotes
+var3=" # var with one quote
+# comment at end
