--- a/configs/.env
+++ b/configs/.env
@@ -1,11 +1,16 @@
 kairat=nurtas
 foo=bar #with comment
 gg=
-foo=#bar 
 # gg brazeer
 Incorrect Line
 переменная=на русском
 var="with doubke quotes"
 var2="" # var with empty quotes
 var3=" # var with one quote
-# comment at end
+# Full comment line
+foo=bar # Comment line 
+nurtas#=kairat
+INVALID LINE 
+
+# double #comment
+# Full comment line at the end
