feat: struct env tag parse

--- a/configs/.env
+++ b/configs/.env
@@ -13,4 +13,10 @@ nurtas#=kairat
 INVALID LINE 
 
 # double #comment
-# Full comment line at the end
+# Full comment line at the end"
+
+Env1=local
+DBConfig=nigga
+Port=880
+Enabled=false
+Price=185.5
